--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <link rel=stylesheet href=style.css>
     </head>
     <body>
-        <img width=100px height=100px src="https://sun9-72.userapi.com/impg/pi1gkSmbhrwQHpOSXE1pMSsbdC6OQ_p25XbN-A/5RVxWx9fuiI.jpg?size=2560x1920&quality=96&sign=81232b3a936119787fe8d36a4f8e9347&type=album" alt="">
+        <div class="heart"></div>
     </body>
 </html>
