--- a/index.html
+++ b/index.html
@@ -6,5 +6,24 @@
     <body>
         <div class="heart"></div>
         Люблю тебя!
+        <div class="container">
+            <div class="block_img">
+                <div class="img_box box1">
+                    <img src="https://cdn.pixabay.com/photo/2021/12/21/03/54/street-6884533__340.jpg" alt="">
+                </div>
+                <div class="img_box box2">
+                    <img src="https://cdn.pixabay.com/photo/2021/03/26/11/41/couple-6125690__340.jpg" alt="">
+                </div>
+                <div class="img_box box3">
+                    <img src="https://cdn.pixabay.com/photo/2020/06/07/02/16/fantasy-5268744__340.jpg" alt="">
+                </div>
+                <div class="img_box box4">
+                    <img src="https://cdn.pixabay.com/photo/2021/12/21/03/54/street-6884533__340.jpg" alt="">
+                </div>
+                <div class="img_box box5">
+                    <img src="https://cdn.pixabay.com/photo/2019/10/08/09/23/ferret-4534480__340.jpg" alt="">
+                </div>
+            </div>
+        </div>
     </body>
 </html>
