--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     </head>
     <body>
         <div class="heart"></div>
-        Люблю тебя!
+        <div class="center">Люблю тебя! Ты самое прекрасное что есть на этом свете!</div>
         <div class="container">
             <div class="block_img">
                 <div class="img_box box1">
-                    <img src="https://cdn.pixabay.com/photo/2021/12/21/03/54/street-6884533__340.jpg" alt="">
+                    <img src="https://sun9-72.userapi.com/impg/pi1gkSmbhrwQHpOSXE1pMSsbdC6OQ_p25XbN-A/5RVxWx9fuiI.jpg?size=2560x1920&quality=96&sign=81232b3a936119787fe8d36a4f8e9347&type=album" alt="">
                 </div>
                 <div class="img_box box2">
-                    <img src="https://cdn.pixabay.com/photo/2021/03/26/11/41/couple-6125690__340.jpg" alt="">
+                    <img src="https://sun9-62.userapi.com/impg/mefp3BlFCqxuhgOvTnq9oq9xL8EiSCt-Eix7Fg/MeY0x2aIWbE.jpg?size=960x1280&quality=96&sign=f1ec13ff17a8f6186bc01789eb751478&type=album" alt="">
                 </div>
                 <div class="img_box box3">
-                    <img src="https://cdn.pixabay.com/photo/2020/06/07/02/16/fantasy-5268744__340.jpg" alt="">
+                    <img src="https://sun7-2.userapi.com/impg/Q5gcB8n9hR_nnHyfnLQsSMdqzZJHehWmGEnSCg/GMWCOTVRiNo.jpg?size=2560x1920&quality=96&sign=fb2e29a9d0fb3622925bf6f16f070f8b&type=album" alt="">
                 </div>
                 <div class="img_box box4">
-                    <img src="https://cdn.pixabay.com/photo/2021/12/21/03/54/street-6884533__340.jpg" alt="">
+                    <img src="https://sun9-80.userapi.com/impg/bHPzVKem_xb8a4ISEs6eEcriNkxPMQpiYRGg1w/dy-8C8S41y8.jpg?size=2560x2560&quality=95&sign=258f10acb2193566f39dcdcbdf63c1ff&type=album" alt="">
                 </div>
                 <div class="img_box box5">
-                    <img src="https://cdn.pixabay.com/photo/2019/10/08/09/23/ferret-4534480__340.jpg" alt="">
+                    <img src="https://sun9-75.userapi.com/impg/U9YUELJC9QzO7mME4zUmMXPgoDMNmiKbWBfWFw/MRQsW2mIrO8.jpg?size=1620x2160&quality=96&sign=07ca5eb137dd2cabf7ff82908722be1f&type=album" alt="">
                 </div>
             </div>
         </div>
